test_0002: ROM from file

--- a/test_0001/Makefile
+++ b/test_0001/Makefile
@@ -1,12 +1,14 @@
+FLAGS  = --ieee=synopsys
+TARGET = tb_file_read
+
 all:
-	ghdl -a --ieee=synopsys std_logic_arith.vhdl
-	ghdl -a --ieee=synopsys txt_util.vhd
-	ghdl -a --ieee=synopsys file_read.vhd
-	ghdl -a --ieee=synopsys tb_file_read.vhd
-	ghdl -e tb_file_read
+	ghdl -a $(FLAGS) txt_util.vhd
+	ghdl -a $(FLAGS) file_read.vhd
+	ghdl -a $(FLAGS) tb_file_read.vhd
+	ghdl -e $(FLAGS) $(TARGET)
 
 simulate:
-	ghdl -r tb_file_read --vcd=test.vcd --stop-time=250ns
+	ghdl -r $(TARGET) --vcd=test.vcd --stop-time=250ns
 
 show:
 	gtkwave test.vcd
@@ -15,4 +17,4 @@ clean:
 	rm -rf *.o
 	rm -rf *~
 	rm -rf *.cf
-	rm -rf tb_file_read
+	rm -rf $(TARGET)
