--- a/test_0006/Makefile
+++ b/test_0006/Makefile
@@ -33,7 +33,7 @@ prog_ram.o: ram
 	ghdl -a $(FLAGS) prog_ram.vhd
 
 run:
-	ghdl -r $(TARGET) --wave=test.ghw --stop-time=5ms
+	ghdl -r $(TARGET) --wave=test.ghw --stop-time=100us
 
 bit:
 	rm -rf build
