--- a/test_0011/Makefile
+++ b/test_0011/Makefile
@@ -1,40 +1,22 @@
-ZPUCCDIR = /opt/zpugcc
-ZPUCORE  = zpu_core.vhd
-FLAGS    = --ieee=synopsys
-TARGET   = sim_fpga_top
-DEVICE   = xc2s300e-6-pq208
-SOURCES  = zpu_config.vhd     \
-           zpupkg.vhd         \
-           txt_util.vhd       \
-           $(ZPUCORE)         \
-           trace.vhd          \
-           fpga_top.vhd       \
-           sim_fpga_top.vhd
-OBJECTS  = $(subst .vhd,.o,$(SOURCES))
-MAIN     = main
+ZPUCORE = zpu_core.vhd
+FLAGS   = --ieee=synopsys
+TARGET  = sim_fpga_top
+DEVICE  = xc2s300e-6-pq208
+SOURCES = prog_ram.vhd     \
+          driver.vhd       \
+          fpga_top.vhd     \
+          sim_fpga_top.vhd
+OBJECTS = $(subst .vhd,.o,$(SOURCES))
+MAIN    = main
 
 all: $(OBJECTS) prog_ram.o
 	ghdl -e $(FLAGS) $(TARGET)
 
-ram: zpuramgen
-	$(ZPUCCDIR)/bin/zpu-elf-gcc -o $(MAIN).elf crt0_phi.S $(MAIN).c -phi -Wl,--gc-sections -Os -abel -Wl,--relax -nostdlib
-	$(ZPUCCDIR)/bin/zpu-elf-objdump --disassemble-all $(MAIN).elf > $(MAIN).dis
-	$(ZPUCCDIR)/bin/zpu-elf-objcopy -O binary $(MAIN).elf $(MAIN).bin
-	./zpuramgen $(MAIN).bin > prog_ram.vhd
-	chmod -x $(MAIN).bin
-	chmod -x $(MAIN).elf
-
-zpuramgen:
-	gcc -o zpuramgen zpuramgen.c
-
 %.o: %.vhd
 	ghdl -a $(FLAGS) $<
 
-prog_ram.o: ram
-	ghdl -a $(FLAGS) prog_ram.vhd
-
 run:
-	ghdl -r $(TARGET) --wave=test.ghw --stop-time=1ms
+	ghdl -r $(TARGET) --wave=test.ghw --stop-time=3000ns
 
 bit:
 	rm -rf build
@@ -64,7 +46,6 @@ clean:
 	rm -rf *.dis
 	rm -rf *.ram
 	rm -rf *.bin
-	rm -rf prog_ram.vhd
 	rm -rf log.txt
 	rm -rf trace.txt
 	rm -rf $(TARGET)
